--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
+<!DOCTYPE html>
+
 <html>
+
 <head>
+
+
+
+	<!-- jquery cdn -->
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+
 </head>
-  <body>
-    <h1>hello world<h1>
+
+<script>
+
+$(document).ready(function(){
+
+	alert("민우의 생일을 축하합니다")
+
+})
+
+</script>
+
+<body>
+
+ 2022.06.17 누정이의 생일을 축하합니다 2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다2022.06.17 누정이의 생일을 축하합니다
+
 </body>
+
 </html>
